# allocators

./: .build-ext  .build_conf  .build_scripts  .clang-format  CMakeLists.txt  README.md  alignment_segregator.hpp  allocator_traits.hpp  allocator_wrapper.hpp  bitmap_allocator.hpp  blob_allocator.hpp  build  cascading_allocator.hpp  fallback_allocator.hpp  format  free_list_allocator.hpp  memblock.hpp  null_allocator.hpp  singleton_allocator.hpp  size_segregator.hpp  stack_allocator.hpp  standard_allocator.hpp  support
include/ext/allocator/: alignment_segregator.hpp  bitmap.hpp  blob.hpp  cascading.hpp  config.hpp  detail_block.hpp  detail_traits.hpp  fallback.hpp  freelist.hpp  null.hpp  singleton.hpp  size_segregator.hpp  stack.hpp  standard.hpp  stl_wrapper.hpp
include/ext/allocators/: alignment_segregator.hpp  bitmap.hpp  blob.hpp  cascading.hpp  config.hpp  detail_block.hpp  detail_traits.hpp  fallback.hpp  freelist.hpp  memory_block.hpp  null.hpp  singleton.hpp  size_segregator.hpp  stack.hpp  standard.hpp  stl_wrapper.hpp
include/x/allocator/: allocator_traits.hpp  allocator_wrapper.hpp  singleton_allocator.hpp
test/: test_allocator_wrapper.cpp  test_bitmap_allocator.cpp  test_blob_allocator.cpp  test_memblock.cpp
tests/: CMakeLists.txt  gtest.cpp  test_allocator_wrapper.cpp  test_bitmap_allocator.cpp  test_blob_allocator.cpp  test_memblock.cpp
